--- a/en/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html
+++ b/en/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Open Source Clojure Programmer - Intern - JOB Openings - nexss.com"
-permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html
+title: "Open Source Social Media Coordinator - Intern - JOB Openings - nexss.com"
+permalink: /en/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
 </script>
 
   <title>
-    Open Source Clojure Programmer - Intern - JOB Openings - nexss.com
+    Open Source Social Media Coordinator - Intern - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Open Source Clojure Programmer - Intern - remote - nexss.com">
-  <link rel="canonical" href="http://nexss.local:8081/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">
+  <meta name="description" content="Open Source Social Media Coordinator - Intern - remote - nexss.com">
+  <link rel="canonical" href="http://nexss.local:8081/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Open Source Clojure Programmer - Intern - JOB Openings - nexss.com">
+  <meta property="og:description" content="Open Source Social Media Coordinator - Intern - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">PL</a>
+                <a class="selected" href="/pl/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -146,25 +146,25 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
     </h1>
     <div>
             <div>
-        <h1>Open Source Clojure Programmer - Intern</h1>
+        <h1>Open Source Social Media Coordinator - Intern</h1>
         <br>
         <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
         
                 <h4>Preferred Qualifications</h4>
         <ul>
-<li><strong>Clojure</strong> experience</li>
+<li>good written and verbal communication skills</li>
 </ul>
                         <h4>Nice To Have</h4>
         <ul>
-<li>Datomic Cloud
+<li>experience in influencer/<strong>social media</strong> marketing
 <ul>
-<li>command line/scripting experience</li>
+<li>graphic design &amp; video editing skills</li>
 </ul></li>
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>development innovative WEB and CLI solutions, 
+<li>be a part of social media team for innovative WEB and CLI solutions, 
 <ul>
 <li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
 <li>participation in training, internal workshops,</li>
