--- a/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html
+++ b/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html
@@ -157,7 +157,10 @@ permalink: /open-source-clojure-programmer-intern/index40/nexss-career-job-detai
 </ul>
                         <h4>Nice To Have</h4>
         <ul>
+<li>Datomic Cloud
+<ul>
 <li>command line/scripting experience</li>
+</ul></li>
 </ul>
                         <h4>Benefits</h4>
         <ul>
