--- a/pl/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html
+++ b/pl/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html
@@ -157,7 +157,10 @@ permalink: /pl/open-source-clojure-programmer-intern/index40/nexss-career-job-de
 </ul>
                         <h4>Mile widziane</h4>
         <ul>
+<li>Datomic Cloud
+<ul>
 <li>command line/scripting experience</li>
+</ul></li>
 </ul>
                         <h4>Benefity</h4>
         <ul>
