--- a/en/nexss-career.html
+++ b/en/nexss-career.html
@@ -396,9 +396,21 @@ permalink: /en/nexss-career.html
         </h3>
         <p>
         </p>
+                <hr>
+        <h3><a href="en/open-source-v-vlang-programmer-intern/index41/nexss-career-job-details.html">Open Source V/Vlang Programmer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="en/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html">Open Source Social Media Coordinator - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
               </div>
       <hr>
-      <div style="color:white;">Total <span style="font-weight:bold;">40</span> job oppenings.</div>
+      <div style="color:white;">Total <span style="font-weight:bold;">42</span> job oppenings.</div>
     </div>
     <div>
       <h2>Spontaneous application</h2>
