--- a/open-source-v-vlang-programmer-intern/index41/nexss-career-job-details.html
+++ b/open-source-v-vlang-programmer-intern/index41/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Open Source Clojure Programmer - Intern - JOB Openings - nexss.com"
-permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html
+title: "Open Source V/Vlang Programmer - Intern - JOB Openings - nexss.com"
+permalink: /open-source-v-vlang-programmer-intern/index41/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
 </script>
 
   <title>
-    Open Source Clojure Programmer - Intern - JOB Openings - nexss.com
+    Open Source V/Vlang Programmer - Intern - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Open Source Clojure Programmer - Intern - remote - nexss.com">
-  <link rel="canonical" href="http://nexss.local:8081/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">
+  <meta name="description" content="Open Source V/Vlang Programmer - Intern - remote - nexss.com">
+  
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Open Source Clojure Programmer - Intern - JOB Openings - nexss.com">
+  <meta property="og:description" content="Open Source V/Vlang Programmer - Intern - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/open-source-v-vlang-programmer-intern/index41/nexss-career-job-details.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">PL</a>
+                <a class="selected" href="/pl/open-source-v-vlang-programmer-intern/index41/nexss-career-job-details.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -81,23 +81,23 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html">blog</a>
+        <a href="nexss-blog.html">blog</a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -107,18 +107,18 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html">blog</a>
+        <a href="nexss-blog.html">blog</a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -146,21 +146,18 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
     </h1>
     <div>
             <div>
-        <h1>Open Source Clojure Programmer - Intern</h1>
+        <h1>Open Source V/Vlang Programmer - Intern</h1>
         <br>
         <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
         
                 <h4>Preferred Qualifications</h4>
         <ul>
-<li><strong>Clojure</strong> experience</li>
+<li><strong>V/Vlang</strong> experience</li>
 </ul>
                         <h4>Nice To Have</h4>
         <ul>
-<li>Datomic Cloud
-<ul>
-<li>command line/scripting experience</li>
-</ul></li>
+<li>concurrent and parallel programming</li>
 </ul>
                         <h4>Benefits</h4>
         <ul>
@@ -225,12 +222,12 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
       <div class="ft-main-item">
         <h4 class="ft-title">About</h4>
         <ul>
-          <li><a href="en/index.html#services">Services</a></li>
-          <li><a class="career" href="en/nexss-career.html">Career</a>
+          <li><a href="index.html#services">Services</a></li>
+          <li><a class="career" href="nexss-career.html">Career</a>
 </li>
-          <li><a href="en/nexss-portfolio.html">Portfolio</a>
+          <li><a href="nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="en/faq.html">FAQ</a>
+          <li><a href="faq.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -239,23 +236,23 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
           <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
-          <li><a href="en/easy-install-nexss-programmer.html">Install</a>
+          <li><a href="easy-install-nexss-programmer.html">Install</a>
 </li>
           <li>
-            <a href="en/nexss-programming-languages.html">Supported programming languages</a>
+            <a href="nexss-programming-languages.html">Supported programming languages</a>
 
           </li>
           <li>
-            <a href="en/nexss-programmer-features.html">Features</a>
+            <a href="nexss-programmer-features.html">Features</a>
 
 
           </li>
           <li>
-            <a href="en/programmer.html">Documentation</a>
+            <a href="programmer.html">Documentation</a>
 
           </li>
           <li>
-            <a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
+            <a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li></li>
@@ -264,9 +261,9 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
       <div class="ft-main-item">
         <h4 class="ft-title">Learn</h4>
         <ul>
-          <li><a href="en/nexss-blog.html">Blog</a>
+          <li><a href="nexss-blog.html">Blog</a>
 </li>
-          <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
@@ -274,17 +271,17 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
       <div class="ft-main-item">
         <h4 class="ft-title">Contact</h4>
         <ul>
-          <li><a href="en/index.html#contacts">Contact</a></li>
+          <li><a href="index.html#contacts">Contact</a></li>
           <li>
             <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="en/privacy-policy.html">Privacy Policy</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
                   </li>
                   <li>
-                    <a href="en/terms-and-conditions.html">Terms and Conditions</a>
+                    <a href="terms-and-conditions.html">Terms and Conditions</a>
                   </li> -->
           <li></li>
         </ul>
@@ -309,7 +306,7 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
     <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
