--- a/pl/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html
+++ b/pl/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Open Source Clojure Programmer - Intern - JOB Openings - nexss.com"
-permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html
+title: "Open Source Social Media Coordinator - Intern - JOB Openings - nexss.com"
+permalink: /pl/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
 </script>
 
   <title>
-    Open Source Clojure Programmer - Intern - JOB Openings - nexss.com
+    Open Source Social Media Coordinator - Intern - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Open Source Clojure Programmer - Intern - remote - nexss.com">
-  <link rel="canonical" href="http://nexss.local:8081/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">
+  <meta name="description" content="Open Source Social Media Coordinator - Intern - remote - nexss.com">
+  
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Open Source Clojure Programmer - Intern - JOB Openings - nexss.com">
+  <meta property="og:description" content="Open Source Social Media Coordinator - Intern - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -51,18 +51,18 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
             </li>
                         <!-- <li class="hideSmall">
                 <i class="fa fa-map-marker"></i>
-                86-005, Prądki, Poland
+                86-005, Prądki, Polska
             </li> -->
 
         </ul>
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">EN</a>
+                <a href="/en/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/open-source-clojure-programmer-intern/index40/nexss-career-job-details.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/open-source-social-media-coordinator-intern/index42/nexss-career-job-details.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -81,23 +81,23 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html">blog</a>
+        <a href="pl/nexss-blog.html">blog</a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="pl/nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="pl/latwa-instalacja-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -107,18 +107,18 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html">blog</a>
+        <a href="pl/nexss-blog.html">blog</a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="pl/nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -141,30 +141,30 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
                 <div class="block" id="nexssPage">
   <div class="center">
     <h1 class="block__title  wow bounceInDown">
-      <span>Career </span>
+      <span>Kariera </span>
       Job Details
     </h1>
     <div>
             <div>
-        <h1>Open Source Clojure Programmer - Intern</h1>
+        <h1>Open Source Social Media Coordinator - Intern</h1>
         <br>
         <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
         
-                <h4>Preferred Qualifications</h4>
+                <h4>Preferowane kwalifikacje</h4>
         <ul>
-<li><strong>Clojure</strong> experience</li>
+<li>good written and verbal communication skills</li>
 </ul>
-                        <h4>Nice To Have</h4>
+                        <h4>Mile widziane</h4>
         <ul>
-<li>Datomic Cloud
+<li>experience in influencer/<strong>social media</strong> marketing
 <ul>
-<li>command line/scripting experience</li>
+<li>graphic design &amp; video editing skills</li>
 </ul></li>
 </ul>
-                        <h4>Benefits</h4>
+                        <h4>Benefity</h4>
         <ul>
-<li>development innovative WEB and CLI solutions, 
+<li>be a part of social media team for innovative WEB and CLI solutions, 
 <ul>
 <li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
 <li>participation in training, internal workshops,</li>
@@ -186,13 +186,13 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
             <hr>
     </div>
     <div>
-      <h2>Spontaneous application</h2>
-<p>We are always looking for world-class talents, so if you don't see any position which match with your qualifications please send us a CV and we will contact you. <a href="mailto:jobs@nexss.com">jobs@nexss.com</a></p>
+      <h2>Spontaniczna Aplikacja</h2>
+<p>Zawsze szukamy wielkich talentów, więc jeśli nie widzisz stanowiska odpowiadającego Twoim kwalifikacjom, prześlij nam CV, a my skontaktujemy się z Tobą.<a href="mailto:jobs@nexss.com">jobs@nexss.com</a></p>
     </div>
     <div>
       <p><br></p>
-<h2>Equal Opportunity Employer</h2>
-<p><em><strong>Nexss.com</strong> is an Equal Opportunity Employer. Qualified applicants are considered for employment without regard to race, color, age, national origin, religion, marital status, sex, sexual orientation, gender identity, gender expression, genetics, disability, protected veteran status or any other basis prohibited by law. We are committed to a diverse and inclusive workplace.</em></p>
+<h2>Pracodawca równych szans</h2>
+<p><em><strong>Nexss.com</strong> jest pracodawcą równych szans. Zakwalifikowani kandydaci są rozpatrywani pod kątem zatrudnienia bez względu na rasę, kolor skóry, wiek, narodowość, religię, stan cywilny, płeć, orientację seksualną, tożsamość płciową, ekspresję płciową, genetykę, niepełnosprawność, status chronionego weterana lub jakąkolwiek inną podstawę zabronioną przez prawo. Jesteśmy zaangażowani w zróżnicowane i integracyjne miejsce pracy.</em></p>
     </div>
   </div>
 </div>
@@ -223,14 +223,14 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
     
     <section class="ft-main">
       <div class="ft-main-item">
-        <h4 class="ft-title">About</h4>
+        <h4 class="ft-title">O nas</h4>
         <ul>
-          <li><a href="en/index.html#services">Services</a></li>
-          <li><a class="career" href="en/nexss-career.html">Career</a>
+          <li><a href="pl/index.html#services">Usługi</a></li>
+          <li><a class="career" href="pl/nexss-kariera.html">Kariera</a>
 </li>
-          <li><a href="en/nexss-portfolio.html">Portfolio</a>
+          <li><a href="pl/nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="en/faq.html">FAQ</a>
+          <li><a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -238,53 +238,53 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
       <div class="ft-main-item">
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
-          <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
-          <li><a href="en/easy-install-nexss-programmer.html">Install</a>
+          <li><a title="Nexss Programmer - Prezentacja wideo" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Prezentacja wideo</a></li>
+          <li><a href="pl/latwa-instalacja-nexss-programmer.html">Instalacja</a>
 </li>
           <li>
-            <a href="en/nexss-programming-languages.html">Supported programming languages</a>
+            <a href="pl/nexss-programmer-jezyki-programowania.html">Obsługiwane języki programowania</a>
 
           </li>
           <li>
-            <a href="en/nexss-programmer-features.html">Features</a>
+            <a href="pl/nexss-programmer-features.html">Funkcje</a>
 
 
           </li>
           <li>
-            <a href="en/programmer.html">Documentation</a>
+            <a href="pl/programmer.html">Dokumentacja</a>
 
           </li>
           <li>
-            <a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
+            <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Learn</h4>
+        <h4 class="ft-title">Nauka</h4>
         <ul>
-          <li><a href="en/nexss-blog.html">Blog</a>
+          <li><a href="pl/nexss-blog.html">Blog</a>
 </li>
-          <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Contact</h4>
+        <h4 class="ft-title">Kontakt</h4>
         <ul>
-          <li><a href="en/index.html#contacts">Contact</a></li>
+          <li><a href="pl/index.html#contacts">Kontakt</a></li>
           <li>
-            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
+            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Wycena projektu</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="en/privacy-policy.html">Privacy Policy</a>
+                    <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
                   </li>
                   <li>
-                    <a href="en/terms-and-conditions.html">Terms and Conditions</a>
+                    <a href="pl/regulamin.html">Regulamin</a>
                   </li> -->
           <li></li>
         </ul>
@@ -292,7 +292,7 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
           </section>
     <ul>
       <li>
-        <strong class="btn__green" style="padding:10px;border-radius: 12px;">GET A QUOTE <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
+        <strong class="btn__green" style="padding:10px;border-radius: 12px;">WYCENA PROJEKTU <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
             hello@nexss.com</a></strong>
       </li>
     </ul>
@@ -308,8 +308,8 @@ permalink: /en/open-source-clojure-programmer-intern/index40/nexss-career-job-de
     Copyright © 2008 - 2021 Nexss.com, Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg">
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
-    <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    <b>Nexss.com</b> używa ciasteczka do rejestrowania danych statystycznych.<br>
+    Więcej tutaj: <a style="color:yellow;" target="_blank" href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
