--- a/en/nexss-portfolio.html
+++ b/en/nexss-portfolio.html
@@ -20,7 +20,7 @@ permalink: /en/nexss-portfolio.html
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="portfolio,nexss,examples">
   <meta name="description" content="Porfolio of the Nexss.com">
-  <link rel="canonical" href="http://nexss.local:8081/nexss-portfolio.html">
+  <link rel="canonical" href="/nexss-portfolio.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="Portfolio - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
