--- a/en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
+++ b/en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
@@ -20,7 +20,7 @@ permalink: /en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
   <meta name="description" content="Custom Scripting Templates - Nexss Programmer Blog">
-  <link rel="canonical" href="http://nexss.local:8081/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">
+  <link rel="canonical" href="/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="BLOG Blender 3D - Custom Scripting Templates">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
