--- a/en/easy-install-nexss-programmer.html
+++ b/en/easy-install-nexss-programmer.html
@@ -20,7 +20,7 @@ permalink: /en/easy-install-nexss-programmer.html
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="free,open source,programmer tool, easy install">
   <meta name="description" content="Install Free Open Source Nexss Programmer Tool easy.">
-  <link rel="canonical" href="http://nexss.local:8081/easy-install-nexss-programmer.html">
+  <link rel="canonical" href="/easy-install-nexss-programmer.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="Easy Install - Free Open Source Nexss Programmer">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
