--- a/en/faq-najczesciej-zadawane-pytania.html
+++ b/en/faq-najczesciej-zadawane-pytania.html
@@ -20,7 +20,7 @@ permalink: /en/faq-najczesciej-zadawane-pytania.html
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <link rel="canonical" href="http://nexss.local:8081/faq-najczesciej-zadawane-pytania.html">
+  <link rel="canonical" href="/faq-najczesciej-zadawane-pytania.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
