--- a/en/nexss-blog.html
+++ b/en/nexss-blog.html
@@ -20,7 +20,7 @@ permalink: /en/nexss-blog.html
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
   <meta name="description" content="News - Nexss Programmer Blog">
-  <link rel="canonical" href="http://nexss.local:8081/nexss-blog.html">
+  <link rel="canonical" href="/nexss-blog.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="BLOG Welcome - News">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
