--- a/en/open-source-machine-learning-engineer-intern/index11/nexss-career-job-details.html
+++ b/en/open-source-machine-learning-engineer-intern/index11/nexss-career-job-details.html
@@ -20,7 +20,7 @@ permalink: /en/open-source-machine-learning-engineer-intern/index11/nexss-career
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
   <meta name="description" content="Open Source Machine Learning Engineer - Intern - remote - nexss.com">
-  <link rel="canonical" href="http://nexss.local:8081/open-source-machine-learning-engineer-intern/index11/nexss-career-job-details.html">
+  <link rel="canonical" href="/open-source-machine-learning-engineer-intern/index11/nexss-career-job-details.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="Open Source Machine Learning Engineer - Intern - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
