--- a/nexss-career.html
+++ b/nexss-career.html
@@ -18,8 +18,8 @@ permalink: /nexss-career.html
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Check our job Openings at Nexss.com">
+  <meta name="keywords" content="careers,job,career,job openings,job search">
+  <meta name="description" content="Do what you love at your personal pace at Nexss.com">
   
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="Career / Job Openings - Nexss.com">
