--- a/nexss-programmer-features.html
+++ b/nexss-programmer-features.html
@@ -19,7 +19,7 @@ permalink: /nexss-programmer-features.html
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="features,open source,programming tool, easy install">
-  <meta name="description" content="Features of the Open Source Nexss Programmer Tool easy.">
+  <meta name="description" content="List of the features of the Open Source Nexss Programmer Tool.">
   
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="Features  - Free Open Source Nexss Programmer">
@@ -58,11 +58,11 @@ permalink: /nexss-programmer-features.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/nexss-programmer-features.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/nexss-programmer-funkcje.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/nexss-programmer-features.html">PL</a>
+                <a class="selected" href="/pl/nexss-programmer-funkcje.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
