--- a/pl/faq-najczesciej-zadawane-pytania.html
+++ b/pl/faq-najczesciej-zadawane-pytania.html
@@ -1,5 +1,5 @@
 ---
-title: "FAQ - Frequently Asked Questions"
+title: "FAQ - Najczęściej zadawane pytania - nexss.com"
 permalink: /pl/faq-najczesciej-zadawane-pytania.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,16 +13,16 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
 </script>
 
   <title>
-    FAQ - Frequently Asked Questions
+    FAQ - Najczęściej zadawane pytania - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
-  <meta name="description" content="Checkout frequently asked questions about Nexss Programmer">
+  <meta name="description" content="Sprawdź najczęściej zadawane pytania o Nexss Programmer i nexss.com">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="FAQ - Frequently Asked Questions">
+  <meta property="og:description" content="FAQ - Najczęściej zadawane pytania - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -358,7 +358,7 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-features.html">Funkcje</a>
+            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
 
 
           </li>
