--- a/pl/nexss-kariera.html
+++ b/pl/nexss-kariera.html
@@ -1,5 +1,5 @@
 ---
-title: "Career / Job Openings - Nexss.com"
+title: "Kariera / Oferty pracy - Nexss.com"
 permalink: /pl/nexss-kariera.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,16 +13,16 @@ permalink: /pl/nexss-kariera.html
 </script>
 
   <title>
-    Career / Job Openings - Nexss.com
+    Kariera / Oferty pracy - Nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Check our job Openings at Nexss.com">
+  <meta name="keywords" content="praca, kariera, oferty pracy, poszukiwanie pracy">
+  <meta name="description" content="Rób to, co kochasz w swoim osobistym tempie na Nexss.com">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Career / Job Openings - Nexss.com">
+  <meta property="og:description" content="Kariera / Oferty pracy - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -473,7 +473,7 @@ permalink: /pl/nexss-kariera.html
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-features.html">Funkcje</a>
+            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
 
 
           </li>
