--- a/pl/nexss-portfolio.html
+++ b/pl/nexss-portfolio.html
@@ -18,8 +18,8 @@ permalink: /pl/nexss-portfolio.html
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="portfolio,nexss,examples">
-  <meta name="description" content="Porfolio of the Nexss.com">
+  <meta name="keywords" content="portfolio,nexss,przykłady">
+  <meta name="description" content="Porfolio Nexss.com">
   
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="Portfolio - Nexss.com">
@@ -641,7 +641,7 @@ permalink: /pl/nexss-portfolio.html
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-features.html">Funkcje</a>
+            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
 
 
           </li>
