--- a/pl/nexss-programmer-features.html
+++ b/pl/nexss-programmer-features.html
@@ -1,5 +1,5 @@
 ---
-title: "Features  - Free Open Source Nexss Programmer"
+title: "Funkcje  -  Open Source - Darmowy Nexss Programmer"
 permalink: /pl/nexss-programmer-features.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,16 +13,16 @@ permalink: /pl/nexss-programmer-features.html
 </script>
 
   <title>
-    Features  - Free Open Source Nexss Programmer
+    Funkcje  -  Open Source - Darmowy Nexss Programmer
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="features,open source,programming tool, easy install">
-  <meta name="description" content="Features of the Open Source Nexss Programmer Tool easy.">
+  <meta name="keywords" content="funkcje, open source, narzędzie do programowania, łatwa instalacja">
+  <meta name="description" content="Lista funkcji narzędzia programistycznego Nexss Programmer Open Source.">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Features  - Free Open Source Nexss Programmer">
+  <meta property="og:description" content="Funkcje  -  Open Source - Darmowy Nexss Programmer">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -399,7 +399,7 @@ nexss myprogram.php # compile php program</code></pre>
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-features.html"><strong>Funkcje</strong></a>
+            <a href="pl/nexss-programmer-funkcje.html"><strong>Funkcje</strong></a>
 
 
           </li>
