--- a/pl/nexss-programmer-funkcje.html
+++ b/pl/nexss-programmer-funkcje.html
@@ -1,6 +1,6 @@
 ---
-title: "Features  - Free Open Source Nexss Programmer"
-permalink: /en/nexss-programmer-features.html
+title: "Funkcje  -  Open Source - Darmowy Nexss Programmer"
+permalink: /pl/nexss-programmer-funkcje.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /en/nexss-programmer-features.html
 </script>
 
   <title>
-    Features  - Free Open Source Nexss Programmer
+    Funkcje  -  Open Source - Darmowy Nexss Programmer
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="features,open source,programming tool, easy install">
-  <meta name="description" content="List of the features of the Open Source Nexss Programmer Tool.">
-  <link rel="canonical" href="/nexss-programmer-features.html">
+  <meta name="keywords" content="funkcje, open source, narzędzie do programowania, łatwa instalacja">
+  <meta name="description" content="Lista funkcji narzędzia programistycznego Nexss Programmer Open Source.">
+  
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Features  - Free Open Source Nexss Programmer">
+  <meta property="og:description" content="Funkcje  -  Open Source - Darmowy Nexss Programmer">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -51,18 +51,18 @@ permalink: /en/nexss-programmer-features.html
             </li>
                         <!-- <li class="hideSmall">
                 <i class="fa fa-map-marker"></i>
-                86-005, Prądki, Poland
+                86-005, Prądki, Polska
             </li> -->
 
         </ul>
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/nexss-programmer-funkcje.html">EN</a>
+                <a href="/en/nexss-programmer-features.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/nexss-programmer-funkcje.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/nexss-programmer-features.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -81,23 +81,23 @@ permalink: /en/nexss-programmer-features.html
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html">blog</a>
+        <a href="pl/nexss-blog.html">blog</a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="pl/nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="pl/latwa-instalacja-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -107,18 +107,18 @@ permalink: /en/nexss-programmer-features.html
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html">blog</a>
+        <a href="pl/nexss-blog.html">blog</a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="pl/nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -157,8 +157,8 @@ permalink: /en/nexss-programmer-features.html
       <span>Nexss Programmer 2.5.43</span>
       Features
     </h1>
-    <a href="en/programmer.html" class="btn btn__green">Documentation</a>
-        <h2>Features</h2>
+    <a href="pl/programmer.html" class="btn btn__green">Dokumentacja</a>
+        <h2>Funkcje</h2>
 <h3>CLI TOOL</h3>
 <p>This is <strong>CLI TOOL</strong> which you can use on your machine, all compilators are installed on demand depends on your needs. It has command <code>nexss</code>. To display help use <code>nexss help</code></p>
 <h3>Compile program from over 50 programming languages</h3>
@@ -376,14 +376,14 @@ nexss myprogram.php # compile php program</code></pre>
     
     <section class="ft-main">
       <div class="ft-main-item">
-        <h4 class="ft-title">About</h4>
+        <h4 class="ft-title">O nas</h4>
         <ul>
-          <li><a href="en/index.html#services">Services</a></li>
-          <li><a class="career" href="en/nexss-career.html">Career</a>
+          <li><a href="pl/index.html#services">Usługi</a></li>
+          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
 </li>
-          <li><a href="en/nexss-portfolio.html">Portfolio</a>
+          <li><a href="pl/nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="en/faq.html">FAQ</a>
+          <li><a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -391,53 +391,53 @@ nexss myprogram.php # compile php program</code></pre>
       <div class="ft-main-item">
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
-          <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
-          <li><a href="en/easy-install-nexss-programmer.html">Install</a>
+          <li><a title="Nexss Programmer - Prezentacja wideo" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Prezentacja wideo</a></li>
+          <li><a href="pl/latwa-instalacja-nexss-programmer.html">Zainstaluj</a>
 </li>
           <li>
-            <a href="en/nexss-programming-languages.html">Supported programming languages</a>
+            <a href="pl/nexss-programmer-jezyki-programowania.html">Obsługiwane języki programowania</a>
 
           </li>
           <li>
-            <a href="en/nexss-programmer-features.html"><strong>Features</strong></a>
+            <a href="pl/nexss-programmer-funkcje.html"><strong>Funkcje</strong></a>
 
 
           </li>
           <li>
-            <a href="en/programmer.html">Documentation</a>
+            <a href="pl/programmer.html">Dokumentacja</a>
 
           </li>
           <li>
-            <a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
+            <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Learn</h4>
+        <h4 class="ft-title">Nauka</h4>
         <ul>
-          <li><a href="en/nexss-blog.html">Blog</a>
+          <li><a href="pl/nexss-blog.html">Blog</a>
 </li>
-          <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Contact</h4>
+        <h4 class="ft-title">Kontakt</h4>
         <ul>
-          <li><a href="en/index.html#contacts">Contact</a></li>
+          <li><a href="pl/index.html#contacts">Kontakt</a></li>
           <li>
-            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
+            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Wycena projektu</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="en/privacy-policy.html">Privacy Policy</a>
+                    <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
                   </li>
                   <li>
-                    <a href="en/terms-and-conditions.html">Terms and Conditions</a>
+                    <a href="pl/regulamin.html">Regulamin</a>
                   </li> -->
           <li></li>
         </ul>
@@ -445,7 +445,7 @@ nexss myprogram.php # compile php program</code></pre>
           </section>
     <ul>
       <li>
-        <strong class="btn__green" style="padding:10px;border-radius: 12px;">GET A QUOTE <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
+        <strong class="btn__green" style="padding:10px;border-radius: 12px;">WYCENA PROJEKTU <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
             hello@nexss.com</a></strong>
       </li>
     </ul>
@@ -461,8 +461,8 @@ nexss myprogram.php # compile php program</code></pre>
     Copyright © 2008 - 2021 Nexss.com, Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg">
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
-    <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    <b>Nexss.com</b> używa ciasteczka do rejestrowania danych statystycznych.<br>
+    Więcej tutaj: <a style="color:yellow;" target="_blank" href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
