--- a/en/easy-install-nexss-programmer.html
+++ b/en/easy-install-nexss-programmer.html
@@ -155,7 +155,7 @@ permalink: /en/easy-install-nexss-programmer.html
   <div class="center">
     <h1 class="block__title  wow bounceInDown">
       <span>Nexss Programmer 2.5.43</span>
-      Open Source
+      Easy Installation
     </h1>
     <br>
     <p>Enquiries related to the <b>Nexss Programmer</b> please send to: <a href="mailto:programmer@nexss.com">programmer@nexss.com</a></p>
