--- a/en/nexss-programming-languages.html
+++ b/en/nexss-programming-languages.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Supported Programming Languages and Kontakt - Nexss Programmer - Nexss.com"
 permalink: /en/nexss-programming-languages.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,16 +13,16 @@ permalink: /en/nexss-programming-languages.html
 </script>
 
   <title>
-    
+    Supported Programming Languages and Kontakt - Nexss Programmer - Nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="keywords" content="programming languages,nexss programmer,nexss,kontakt">
+  <meta name="description" content="List of all supported programming languages by the Nexss Programmer.">
   <link rel="canonical" href="/nexss-programming-languages.html">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="">
+  <meta property="og:description" content="Supported Programming Languages and Kontakt - Nexss Programmer - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
