--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,7 @@ permalink: /faq.html
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
-  <meta name="description" content="Checkout frequently asked questions about Nexss Programmer">
+  <meta name="description" content="Checkout frequently asked questions about Nexss Programmer and nexss.com">
   
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="FAQ - Frequently Asked Questions">
