--- a/pl/latwa-instalacja-nexss-programmer.html
+++ b/pl/latwa-instalacja-nexss-programmer.html
@@ -155,7 +155,7 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
   <div class="center">
     <h1 class="block__title  wow bounceInDown">
       <span>Nexss Programmer 2.5.43</span>
-      Open Source (Otwarte oprogramowanie)
+      Łatwa instalacja
     </h1>
     <br>
     <p>Zapytania związane z <b>Nexss Programmer</b> proszę przesłać na: <a href="mailto:programmer@nexss.com">programmer@nexss.com</a></p>
@@ -442,7 +442,7 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-features.html">Funkcje</a>
+            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
 
 
           </li>
