--- a/pl/nexss-programmer-jezyki-programowania.html
+++ b/pl/nexss-programmer-jezyki-programowania.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Obsługiwane języki programowania i Kontakt - Nexss Programmer - Nexss.com"
 permalink: /pl/nexss-programmer-jezyki-programowania.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,16 +13,16 @@ permalink: /pl/nexss-programmer-jezyki-programowania.html
 </script>
 
   <title>
-    
+    Obsługiwane języki programowania i Kontakt - Nexss Programmer - Nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="keywords" content="języki programowania,nexss programista,nexss,kontakt">
+  <meta name="description" content="Lista wszystkich obsługiwanych języków programowania przez Nexss Programmer.">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="">
+  <meta property="og:description" content="Obsługiwane języki programowania i Kontakt - Nexss Programmer - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -631,7 +631,7 @@ Wszystkie strony i kontakty wyświetlone są poniżej.</p>
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-features.html">Funkcje</a>
+            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
 
 
           </li>
