--- a/programmerMultiple-OSes.html
+++ b/programmerMultiple-OSes.html
@@ -170,7 +170,7 @@ more here: <a href="programmer.html/Files---Templates">Files---Templates</a></li
 <h2>Donate <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=RP72WY9S6CM4L&amp;source=url"><img src="https://img.shields.io/badge/Donate-PayPal-green.svg" alt="Donate"></a></h2>
 <p>It is a great pleasure to work on the tools for everyone however it is a huge amount of work and the donations are always part of motivation which helps to move forward. There is still a lot of work to implement <strong>Nexss PROGRAMMER</strong> on the <strong>Linux</strong> and <strong>MacOS</strong>.</p>
 <p>Please consider donating to the Nexss Paypal Account</p>
-<p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=RP72WY9S6CM4L&amp;source=url"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" alt="paypal"></a> <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=RP72WY9S6CM4L&amp;source=url"><img src="https://github.com/nexssp/cli/raw/master/nexss_kod_qr.png" alt="Donate"></a></p>
+<p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=RP72WY9S6CM4L&amp;source=url"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" alt="paypal"></a> <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=RP72WY9S6CM4L&amp;source=url"><img src="https://user-images.githubusercontent.com/53263666/117887982-cf314400-b2b1-11eb-80d4-f3007429b759.png" alt="Donate"></a></p>
 
             </div>
             <div class="flex-shrink-0 col-12 col-md-3">
@@ -179,7 +179,6 @@ more here: <a href="programmer.html/Files---Templates">Files---Templates</a></li
 <li>Getting Started
 <ul>
 <li><a href="programmer.html/Concept-Overview">Overview</a></li>
-<li><a href="programmer.html/Quick-Start">Quick Start</a></li>
 <li><a href="programmer.html/Nexss-Programmer-Cheat-sheet">Cheat sheet</a></li>
 <li><a href="programmer.html/Nexss-Files">.nexss</a></li>
 <li><a href="programmer.html/Tutorials">Tutorials</a></li>
