--- a/programmerNexss-Programmer-Programming-Languages.html
+++ b/programmerNexss-Programmer-Programming-Languages.html
@@ -91,7 +91,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
         <hr>
         <div class="d-flex flex-column flex-md-row">
             <div class="flex-shrink-0 col-12 col-md-9 mb-5 mb-md-0">
-                <h2>Programming languages implemented in Nexss Programmer. Updated: <strong>30 April 2021</strong></h2>
+                <h2>Programming languages implemented in Nexss Programmer. Updated: <strong>07 May 2021</strong></h2>
 <table>
 <thead>
 <tr>
@@ -541,7 +541,7 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <td>V</td>
 <td>v</td>
 <td><a href="https://vlang.io/">https://vlang.io/</a></td>
-<td>* limited</td>
+<td>Yes</td>
 <td>Yes</td>
 <td></td>
 <td>Yes</td>
@@ -584,7 +584,6 @@ permalink: /programmer.html/Nexss-Programmer-Programming-Languages
 <li>Getting Started
 <ul>
 <li><a href="programmer.html/Concept-Overview">Overview</a></li>
-<li><a href="programmer.html/Quick-Start">Quick Start</a></li>
 <li><a href="programmer.html/Nexss-Programmer-Cheat-sheet">Cheat sheet</a></li>
 <li><a href="programmer.html/Nexss-Files">.nexss</a></li>
 <li><a href="programmer.html/Tutorials">Tutorials</a></li>
