--- a/en/nexss-blog.html
+++ b/en/nexss-blog.html
@@ -190,11 +190,16 @@ permalink: /en/nexss-blog.html
               </div>
       <div class="column2">
         <h2>News</h2>
-<h3>Nexss Programmer release <b>2.5.43</b></h3>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">September 30th, 2021</span></p>
+<h3>Nexss Programmer release <b>2.5.44</b></h3>
+<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">October 9th, 2021</span></p>
 <p>Improvements+<br>
-<strong>CVE-2021-3807</strong> Inefficient Regular Expression Complexity in chalk/ansi-regex<br>
-<strong>CVE-2021-3749</strong> Incorrect Comparison in axios</p>
+<strong>CVE-2021-3807</strong> Inefficient Regular Expression Complexity in chalk/ansi-regex</p>
+<ul>
+<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.44">more</a>
+<h3>Nexss Programmer release <b>2.5.43</b></h3></li>
+</ul>
+<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">September 30th, 2021</span></p>
+<p><strong>CVE-2021-3749</strong> Incorrect Comparison in axios</p>
 <ul>
 <li><a href="https://github.com/nexssp/cli/releases/tag/2.5.43">more</a>
 <h3>Nexss.com Job Openings</h3></li>
